# todoist-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker_entrypoint.sh  lefthook.yml
src/: emoji.rs  lib.rs  main.rs  routes.rs
src/claude/: mod.rs  models.rs  prompt.rs  system_prompt.txt
src/interactions/: command_handlers.rs  commands.rs  mod.rs  verifier.rs
src/interactions/commands/: arguments.rs  mod.rs
src/llm/: mod.rs  prompt.rs
src/llm/claude/: mod.rs  prompt.rs
src/llm/openai/: mod.rs
src/todoist/: http.rs  mod.rs
src/todoist/http/: mod.rs  models.rs
todoist_derive/: Cargo.toml
todoist_derive/src/: choices.rs  command.rs  lib.rs
