[workspace]
members = ["todoist_derive"]

[package]
name = "todoist-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["macros"] }
dotenv = "0.15.0"
ed25519-dalek = "2.2.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
twilight-http = { git = "https://github.com/twilight-rs/twilight", rev = "b24a7918ba5e84cbc488a23809b770733b3cefa5" }
twilight-model = { git = "https://github.com/twilight-rs/twilight", rev = "b24a7918ba5e84cbc488a23809b770733b3cefa5" }
twilight-util = { git = "https://github.com/twilight-rs/twilight", rev = "b24a7918ba5e84cbc488a23809b770733b3cefa5", features = [
    "builder",
] }
todoist_derive = { path = "./todoist_derive" }
url = "2.5.7"
chrono = "0.4.42"
chrono-tz = "0.10.4"
